--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,13 +6,12 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: '>=3.0.3 <4.0.0'
 
 dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  flutter_svg: ^2.0.5
 
 dev_dependencies:
   flutter_test:
@@ -25,7 +24,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - svg/
+    - img/
 
   # fonts:
   #   - family: Schyler
