--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,17 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.2
+  firebase_auth: ^4.6.3
+  firebase_core: ^2.14.0
   flutter:
     sdk: flutter
+  shared_preferences: ^2.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^2.0.1
 
-  flutter_lints: ^2.0.0
 
 flutter:
 
