--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,6 +43,7 @@ android {
     }
 
     defaultConfig {
+        multiDexEnabled true
         applicationId "com.project.transacxi"
         minSdkVersion 19
         targetSdkVersion flutter.targetSdkVersion
