--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.3 <4.0.0'
+  sdk: '>=3.0.5 <4.0.0'
 
 dependencies:
   cloud_firestore: ^4.8.1
@@ -17,6 +17,7 @@ dependencies:
   firebase_storage: ^11.2.3
   flutter:
     sdk: flutter
+  image_picker: ^1.0.1
   shared_preferences: ^2.1.2
 
 dev_dependencies:
