--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   flutterwave_standard: ^1.0.8
   image_picker: ^1.0.1
+  pay_with_paystack: ^1.0.4
   shared_preferences: ^2.1.2
 
 dev_dependencies:
@@ -36,7 +37,7 @@ flutter:
 
   assets:
     - img/
-    - keys.env
+    - .env
 
   # fonts:
   #   - family: Schyler
