--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.1.0
   flutterwave_standard: ^1.0.8
+  http: ^1.1.0
   image_picker: ^1.0.1
   pay_with_paystack: ^1.0.4
   shared_preferences: ^2.1.2
