--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,10 +20,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
+  flutter_svg: ^2.0.7
   flutterwave_standard: ^1.0.8
-  http: ^1.1.0
   image_picker: ^1.0.1
-  pay_with_paystack: ^1.0.4
+  flutter_paystack: ^1.0.7
   shared_preferences: ^2.1.2
 
 dev_dependencies:
