--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   image_picker: ^1.0.1
   flutter_paystack: ^1.0.7
   shared_preferences: ^2.1.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
